--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,9 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/PersonalSite/appsettings.json
+
+# Ditch the Archive
+/PersonalSite/_Archive
+b
+/PersonalSite/appsettings.json
